Fix issues with horizontal scrolling.

--- a/css/styles.css
+++ b/css/styles.css
@@ -985,6 +985,7 @@ a {
   align-items: center;
   gap: 5rem 3rem;
   margin: 12rem 0;
+  overflow-x: hidden;
 }
 
 .feature:first-of-type {
